# log_analyser

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  local.config  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
data/log/: .processed.txt
data/reports/: report-2024.07.30.html
log_analyzer/: log_analyzer.py
tests/: tests_log_analyzer.py
