[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["okravchenko <skeptik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pre-commit = "^4.0.1"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
